syntax = "proto3";

package product_service;

option go_package = "go-full-stack-learn/clound-native/grpc/code/demo_product/pbfile";

message ProdRequest {
  int32 prodID=1;
}

message ProdResponse {
  string prodName=1;
}

message QueryRequest {
  int32 pageSize=1;
}

message ProdListResponse {
  repeated ProdResponse prodList = 1;
}
service ProdService{
  rpc GetProdName (ProdRequest) returns (ProdResponse);
  rpc GetProdNameList(QueryRequest) returns(ProdListResponse);
}